--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300&display=swap');
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Akshar', sans-serif;
     color: white;
     margin: 0;
     padding: 0;
@@ -8,11 +10,13 @@ body{
 }
 
 header{
-    background-color: #410066;
+    background-color: #1f1f1f;
+    background-color: white;
     margin: 0 auto;
-    padding: 0;
+    padding: 0px 0px 20px 0px;
     display: flex;
     height: 80px;
+
 }
 header ul{
     display: block;
@@ -22,8 +26,6 @@ header ul{
     margin-right: 100px;
 }
 header li{
-    border: 2px solid wheat;
-    border-radius: 10px;
     margin: 0 auto;
     padding: 10px;
     margin-left: 40px ;
@@ -34,19 +36,20 @@ header li>a{
     margin: 0 auto;
     padding: 0;
     font-size: 24px;
-    color: rgb(255, 255, 255);
+    color: #1f1f1f;
     text-decoration:none;
 }
 
 header a:hover{
-    color: #fffb00;
+    color: #ff5050;
 }
 
 .main{
-    background-color: #410066;
+    background-color: #ffffff;
+    color: #1f1f1f;
     text-align: center;
     margin: 0 auto;
-    display: inline-flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
     text-align: center;
@@ -55,6 +58,7 @@ header a:hover{
     z-index: -100;
 }
 .main h1{
+    font-size: 116px;
     margin: 0 auto;
     padding: 0;
     padding-top: 100px;
@@ -63,14 +67,17 @@ header a:hover{
     display: block;
     width: 100%;
 }
+.main a{
+    text-decoration: none;
+}
 
 #red{
-    color: #fffb00;
+    color: #ff5050;
 }
 .about{
     margin: 0 auto;
     background-color: white;
-    color: #410066;
+    color: #1f1f1f;
     height: 600px;
 }
 .about h2{
@@ -78,13 +85,14 @@ header a:hover{
     padding-top: 30px;
     text-align: center;
     font-size: 52px;
+    color: rgb(255, 80, 80);
 }
 
 .about-content{
     width: min-content;
     margin: 0 auto;
-display: flex;
-justify-content:center;
+    display: flex;
+    justify-content:center;
 }
 .about-list{
     margin: 0 auto;
@@ -94,7 +102,7 @@ justify-content:center;
     display: block;
     width: 390px;
     height: 350px;
-    border-right: 1px solid #410066;
+    border-right: 1px solid #1f1f1f;
     padding: 20px;
 }
 .about-list li{
@@ -124,16 +132,25 @@ footer{
     margin: 0 auto;
     padding: 50px;
     border-style: none;
-    background-color: #000000;
-    display: flex;
-    flex-wrap: wrap;
+    background-color: #1f1f1f;
+   
+}
+
+footer h2{
+    text-align: center;
+    font-size: 52px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    color: #ff5050;
 }
 
 .contacts img{
     width: 50px;
 }
 .contacts{
-    padding-top: 70px;
+    display: flex;
+    padding-top: 20px;
     margin: 0 auto;
 }
 .contacts ul{
@@ -154,9 +171,8 @@ footer{
 }
 .contacts a span{
     font-size: 16px;
-    font-weight: bolder;
     margin-left: 10px;
-    color: white;
+    color: rgb(185, 185, 185);
 }
 
 .button-52 {
@@ -170,7 +186,7 @@ footer{
     letter-spacing: 1px;
     padding: 13px 20px 13px;
      outline: 0;
-    border: 1px solid white;
+    border: 1px solid #1f1f1f;
     cursor: pointer;
     position: relative;
     background-color: rgba(0, 0, 0, 0);
@@ -183,7 +199,7 @@ footer{
 .button-52:after {
     display: block;
     content: "";
-    background-color: #fffb00;
+    background-color: #ff5050;
     width: 100%;
     z-index: -1;
     position: absolute;
@@ -198,6 +214,37 @@ footer{
   left: 0px;
 }
 
+.portfolio{
+    background-color: white;
+    height: 1000px;
+}
+
+.portfolio h2{
+    margin: 0 auto;
+    padding: 0;
+    padding-top: 100px;
+    text-align: center;
+    color: #ff5050;
+    font-size: 92px;
+}
+
+.portfolio p{
+    margin: 0 auto;
+    width: 800px;
+    text-align: center;
+    font-size: 32px;
+    color: #1f1f1f;
+}
+
+#portfolio-item{
+    list-style: none;
+}
+#portfolio-item-img img{
+    margin: 20px;
+    width: 275px;
+    border-radius: 20px;
+}
+
 @media (min-width: 768px) {
   .button-52 {
     padding: 13px 50px 13px;
@@ -208,8 +255,11 @@ footer{
     .contacts ul{
         justify-content: left;
         width: 500px;
-        flex-wrap: wrap;
     }   
+
+    .contacts li{
+        float: right;
+    }
 
     header,.main,.about,footer{
         margin: 0 auto;
@@ -221,3 +271,29 @@ footer{
     }  
 }
 
+
+.container_slider_css{
+    margin:50px auto;
+    width:900px;
+    height:900px;
+    overflow:hidden;
+    position:relative}
+.photo_slider_css{
+    position:absolute;
+    animation:round 6s infinite;
+    opacity:0;
+    width: 300px;}
+@keyframes round {
+25%{opacity:1}
+40%{opacity:0}
+}
+img:nth-child(1){animation-delay:0s}
+img:nth-child(2){animation-delay:3s}
+/* img:nth-child(3){animation-delay:0s}
+img:nth-child(4){animation-delay:0} */
+@media(min-width:0px) and (max-width:320px) {
+.container_slider_css{width:80%;height:190px}
+}
+@media(min-width:321px) and (max-width:480px) {
+.container_slider_css{width:80%;height:190px}
+}
